--- a/assets/css/helper/cursor.scss
+++ b/assets/css/helper/cursor.scss
@@ -8,7 +8,7 @@
     }
 
     .mouse-ring {
-        position: fixed;
+        position: absolute;
         border: 2px solid #c0c0c0;
         z-index: 10;
         width: 50px;
