--- a/_includes/partials/navigation.html
+++ b/_includes/partials/navigation.html
@@ -1,6 +1,6 @@
 <div class="site-nav">
     <div class="site-nav-avatar">
-        <img src="{{ site.baseurl }}/{{ site.images }}/avatar.jpg">
+        <img src="{{ site.baseurl }}/assets/images/avatar.jpg">
     </div>
     <p class="site-nav-title">ari[Ma]'s<br>Notebook</p>
     <ul class="site-nav-menu">
