--- a/assets/css/helper/description.scss
+++ b/assets/css/helper/description.scss
@@ -1,5 +1,6 @@
 .article-description {
-    margin: 18px 0 0;
+    margin: 18px 0 1rem;
+
     font: {
         family: "YouYuan";
         size: 18px;
