--- a/assets/css/fonts/fontface.scss
+++ b/assets/css/fonts/fontface.scss
@@ -9,6 +9,6 @@
 }
 
 @font-face {
-    font-family: Yiwen-r;
-    src: url("/assets/lib/fonts/一吻便偷一颗心(non-commercial).ttf");
+    font-family: LXGW-r;
+    src: url("/assets/lib/fonts/LXGWWenKai-Regular.ttf");
 }
