--- a/assets/css/partials/body.scss
+++ b/assets/css/partials/body.scss
@@ -127,7 +127,7 @@
 // postlist
 .list {
     &-item {
-        font-family: "Yiwen-r", "YouYuan";
+        font-family: "LXGW-r", "YouYuan";
         border: 2px solid #a0a0a0;
         border-radius: 10px;
         box-shadow: 5px 5px 10px #404040;
