--- a/assets/css/partials/nav.scss
+++ b/assets/css/partials/nav.scss
@@ -53,7 +53,7 @@
     &-item {
         font: {
             size: 22px;
-            family: "Yiwen-r", "YouYuan";
+            family: "LXGW-r", "YouYuan";
         }
         padding: 0 10px;
         margin: 15px 0;
