--- a/assets/css/fonts/fontface.scss
+++ b/assets/css/fonts/fontface.scss
@@ -9,6 +9,6 @@
 }
 
 @font-face {
-    font-family: LXGW-r;
-    src: url("/assets/lib/fonts/LXGWWenKai-Regular.ttf");
+    font-family: SourceHanSans;
+    src: url("/assets/lib/fonts/SourceHanSansSC-Regular.otf");
 }
