--- a/_includes/_layout.html
+++ b/_includes/_layout.html
@@ -15,6 +15,7 @@
         {% endif %}
     </head>
     <body>
+        {{ site.baseurl }}
         {% include partials/header.html %}
 
         <main id="main" class="main">
