--- a/assets/css/helper/cursor.scss
+++ b/assets/css/helper/cursor.scss
@@ -1,10 +1,10 @@
 @media (min-width: 42em) {
     body {
-        cursor: url("/assets/images/cursor.png"), auto;
+        cursor: url("/arima-s-notebook/assets/images/cursor.png"), auto;
     }
     
     a {
-        cursor: url("/assets/images/cursor.png"), auto;
+        cursor: url("/arima-s-notebook/assets/images/cursor.png"), auto;
     }
 
     .mouse-ring {
