--- a/assets/css/partials/footer.scss
+++ b/assets/css/partials/footer.scss
@@ -18,7 +18,7 @@
 
     .sakura-ro {
         background: {
-            image: url("/assets/images/sakura.svg");
+            image: url("/arima-s-notebook/assets/images/sakura.svg");
             position: center;
             repeat: no-repeat;
             size: cover;
