--- a/assets/css/partials/header.scss
+++ b/assets/css/partials/header.scss
@@ -50,7 +50,7 @@
             width: 24px;
             height: 24px;
             background: {
-                image: url("/assets/images/fa/bars.svg");
+                image: url("/arima-s-notebook/assets/images/fa/bars.svg");
                 position: center;
                 size: cover;
                 repeat: no-repeat;
