--- a/assets/css/base.scss
+++ b/assets/css/base.scss
@@ -2,7 +2,8 @@
     box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
     margin: 0;
     padding: 0;
 }
@@ -12,10 +13,6 @@ html {
     font-size: 20px;
     font-weight: 300;
     line-height: 1.6;
-
-    @media (min-width: 38em) {
-        font-size: 20px;
-    }
 }
 
 body {
