--- a/assets/css/helper/description.scss
+++ b/assets/css/helper/description.scss
@@ -2,7 +2,7 @@
     margin: 18px 0 1rem;
 
     font: {
-        family: "YouYuan";
+        family: "SourceHanSans";
         size: 18px;
     }
 }
