--- a/assets/css/partials/body.scss
+++ b/assets/css/partials/body.scss
@@ -1,6 +1,4 @@
 .main {
-    width: 100%;
-    height: fit-content;
     transform: translateX(0);
     transition: transform .3s linear;
 
@@ -25,7 +23,7 @@
         margin: 1rem auto;
 
         background: {
-            image: url("/assets/images/hr-img.png");
+            image: url("/arima-s-notebook/assets/images/hr-img.png");
             repeat: no-repeat;
             position: center;
         }
@@ -33,11 +31,10 @@
 }
 
 
-// main page
+// main
 .headertop {
-    width: 100%;
-    background-color: #404040;
-    z-index: 0;
+    //background-color: #404040;
+    z-index: 1;
     position: relative;
 
     ::before {
@@ -52,9 +49,22 @@
     }
 }
 
+.bg {
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    position: absolute;
+    background: {
+        image: url("/arima-s-notebook/assets/images/bg.webp");
+        position: center top;
+        size: cover;
+        attachment: fixed;
+    }
+}
+
 .filter-dot {
     box-sizing: inherit;
-    background-image: url("/assets/images/dot.gif");
+    background-image: url("/arima-s-notebook/assets/images/dot.gif");
 }
 
 .container {
@@ -96,10 +106,9 @@
     font: {
         size: 1rem;
         weight: bold;
-        family: "YouYuan";
+        family: "SourceHanSans";
     }
     word-break: break-all;
-    background: rgba(0,0,0,.5);
 
     p {
         margin: 1rem 0;
@@ -115,11 +124,11 @@
     }
 
     .quote-left {
-        background: url("/assets/images/fa/quote-left.svg") center no-repeat;
+        background: url("/arima-s-notebook/assets/images/fa/quote-left.svg") center no-repeat;
     }
 
     .quote-right {
-        background: url("/assets/images/fa/quote-right.svg") center no-repeat;
+        background: url("/arima-s-notebook/assets/images/fa/quote-right.svg") center no-repeat;
     }
 }
 
@@ -127,7 +136,7 @@
 // postlist
 .list {
     &-item {
-        font-family: "SourceHanSans", "YouYuan";
+        font-family: "SourceHanSans";
         border: 2px solid #a0a0a0;
         border-radius: 10px;
         box-shadow: 5px 5px 10px #404040;
@@ -144,6 +153,7 @@
     &-post-info {
         height: fit-content;
         display: flex;
+        font-size: 17px;
 
         .clock {
             margin: .4rem 3px;
@@ -151,7 +161,7 @@
             width: 15px;
             height: 15px;
             background: {
-                image: url("/assets/images/fa/clock.svg");
+                image: url("/arima-s-notebook/assets/images/fa/clock.svg");
                 position: center;
                 size: cover;
                 repeat: no-repeat;
@@ -164,7 +174,7 @@
             width: 15px;
             height: 15px;
             background: {
-                image: url("/assets/images/fa/user-edit.svg");
+                image: url("/arima-s-notebook/assets/images/fa/user-edit.svg");
                 position: center;
                 size: cover;
                 repeat: no-repeat;
