--- a/_includes/_layout.html
+++ b/_includes/_layout.html
@@ -5,45 +5,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
         <meta name="renderer" content="webkit">
         <title>{% if page.title %}{{ page.title }} | {{ site.name }}{% else %}{{ site.name }}{% endif %}</title>
-        {% if site.favicon.enable %}
-        <link rel="shortcut icon" href="{{ site.baseurl }}{{ site.favicon.path }}">
-        {% endif %}
+        <link rel="shortcut icon" href="{{ site.baseurl }}/assets/images/avatar.jpg">
         <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css">
-        {% if site.aplayer %}
-        <!--APlayer Style-->
-        <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/helper/APlayer.min.css">
-        {% endif %}
     </head>
     <body>
         {% include partials/header.html %}
 
-    <div id="main" class="main">
-        {{ content }}
-    </div>
+        <div id="main" class="main">
+            {{ content }}
+        </div>
 
         {% include partials/navigation.html %}
-
-        {% if site.b2t == true %}
-        {% include helper/b2t.html %}
-        {% endif %}
-
-        {% if site.aplayer %}
-        {% include helper/aplayer.html %}
-        {% endif %}
-
-        {% unless page.footer == false %}
         {% include partials/footer.html %}
-        {% endunless %}
-
+        {% include partials/b2t.html %}
         {% include scripts/scripts.html %}
-
-        {% if site.mathjax %}
-        {% include helper/mathjax.html %}
-        {% endif %}
-
-        {% if page.snowfall %}
-        <!--Snow Fall-->
-        <script src="{{ site.baseurl }}/assets/js/snow-fall.js"></script>
-        {% endif %}
     </body>
 </html>
