--- a/_includes/index.html
+++ b/_includes/index.html
@@ -1,14 +1,15 @@
-<div class="bg"></div>
-
 <div class="headertop filter-dot">
-    <canvas id="Snow"></canvas>
-
-    <div class="container">
-        <div class="center-text">
-            <span class="title">ari[Ma]'s<br>Notebook</span>
-        </div>
-        <div class="headertext">
-            <p><i class="fa quote-left"></i>{{ __.headertop["centertext"] }}<i class="fa quote-right"></i></p>
+    <div class="bg">
+        <div class="container">
+            <div class="center-text">
+                <span class="title">ari[Ma]'s<br>Notebook</span>
+            </div>
+            <div class="headertext">
+                <p><i class="fa quote-left"></i>{{ __.headertop["centertext"] }}<i class="fa quote-right"></i></p>
+            </div>
         </div>
     </div>
 </div>
+
+{% include partials/postlist.html %}
+
