--- a/assets/css/partials/b2t.scss
+++ b/assets/css/partials/b2t.scss
@@ -1,7 +1,7 @@
 .b2t {
     position: fixed;
     background: {
-        image: url("/arima-s-notebook/assets/images/fa/angle-up.svg");
+        image: url("/assets/images/fa/angle-up.svg");
         position: center;
         repeat: no-repeat;
     }
@@ -15,6 +15,8 @@
     transition: background-color .2s,border .2s,opacity .2s,transform .2s;
     opacity: 0;
     transform: translateY(25px);
+    z-index: 3;
+    cursor: pointer;
 
     &.on {
         opacity: 0.5;
