--- a/assets/css/partials/b2t.scss
+++ b/assets/css/partials/b2t.scss
@@ -1,7 +1,7 @@
 .b2t {
     position: fixed;
     background: {
-        image: url("/assets/images/fa/angle-up.svg");
+        //image: url("/assets/images/fa/angle-up.svg");
         position: center;
         repeat: no-repeat;
     }
