--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,12 +1,9 @@
 ---
 ---
 
-@import "base";
-
+@import "partials/base";
 @import "fonts/fontface";
-
 @import "highlighter/highlighter";
-
 @import "partials/b2t";
 @import "partials/body";
 @import "partials/footer";
